force-app/main/default/objects/User/fields/Div__c.field-meta.xml
<CustomField>
    <fullName>Div__c</fullName>
    <label>Div</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>APD</fullName>
                <isActive>false</isActive>
                <label>APD</label>
            </value>
            <value>
                <fullName>CDD</fullName>
            </value>
            <value>
                <fullName>CDD/IDD</fullName>
            </value>
            <value>
                <fullName>CDD/IDD/MBD</fullName>
            </value>
            <value>
                <fullName>CDD/IDD/MBD/TDX</fullName>
            </value>
            <value>
                <fullName>CDD/IDD/TDX</fullName>
            </value>
            <value>
                <fullName>CDD/MBD</fullName>
            </value>
            <value>
                <fullName>CDD/MBD/TDX</fullName>
            </value>
            <value>
                <fullName>CDD/TDX</fullName>
            </value>
            <value>
                <fullName>IDD</fullName>
            </value>
            <value>
                <fullName>IDD/MBD</fullName>
            </value>
            <value>
                <fullName>IDD/MBD/TDX</fullName>
            </value>
            <value>
                <fullName>IDD/TDX</fullName>
            </value>
            <value>
                <fullName>IT</fullName>
            </value>
            <value>
                <fullName>MBD</fullName>
            </value>
            <value>
                <fullName>MBD/TDX</fullName>
            </value>
            <value>
                <fullName>PDX</fullName>
            </value>
            <value>
                <fullName>RDS</fullName>
                <isActive>false</isActive>
                <label>RDS</label>
            </value>
            <value>
                <fullName>SDG</fullName>
            </value>
            <value>
                <fullName>TDX</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>