force-app/main/default/objects/User/fields/Governed_by_Works_Council__c.field-meta.xml
<CustomField>
    <fullName>Governed_by_Works_Council__c</fullName>
    <description>[CDD nEM Wave 1] Tracks whether the user has to be compliant to the Works Council&apos;s regulation.</description>
    <label>Governed by Works Council</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>DE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>