force-app/main/default/objects/User/fields/Manager_Text__c.field-meta.xml
<CustomField>
    <fullName>Manager_Text__c</fullName>
    <description>Used for reporting only since Manager isn&apos;t an available field for reports.  Not be seen on the page layout.</description>
    <formula>Manager.FirstName + &apos; &apos; + Manager.LastName</formula>
    <label>Manager</label>
    <type>Text</type>
</CustomField>