force-app/main/default/objects/User/fields/Reg__c.field-meta.xml
<CustomField>
    <fullName>Reg__c</fullName>
    <label>Reg</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>3P</fullName>
            </value>
            <value>
                <fullName>All</fullName>
            </value>
            <value>
                <fullName>APAC</fullName>
            </value>
            <value>
                <fullName>APAC, EMEA, LATAM</fullName>
            </value>
            <value>
                <fullName>APJ</fullName>
            </value>
            <value>
                <fullName>CACR Approvers</fullName>
            </value>
            <value>
                <fullName>Capital Contracting</fullName>
            </value>
            <value>
                <fullName>Cascadion</fullName>
                <isActive>false</isActive>
                <label>Cascadion</label>
            </value>
            <value>
                <fullName>Central</fullName>
            </value>
            <value>
                <fullName>China</fullName>
            </value>
            <value>
                <fullName>Customer Service</fullName>
            </value>
            <value>
                <fullName>Direct Europe</fullName>
            </value>
            <value>
                <fullName>EEMEA</fullName>
            </value>
            <value>
                <fullName>EMEA</fullName>
            </value>
            <value>
                <fullName>Emerging Markets</fullName>
            </value>
            <value>
                <fullName>EU</fullName>
            </value>
            <value>
                <fullName>Europe</fullName>
            </value>
            <value>
                <fullName>Europe, LATMEA, APAC</fullName>
            </value>
            <value>
                <fullName>Executive</fullName>
            </value>
            <value>
                <fullName>Finance</fullName>
            </value>
            <value>
                <fullName>Global</fullName>
            </value>
            <value>
                <fullName>Government</fullName>
            </value>
            <value>
                <fullName>Health Systems Director</fullName>
            </value>
            <value>
                <fullName>HSE</fullName>
            </value>
            <value>
                <fullName>Inside Sales</fullName>
            </value>
            <value>
                <fullName>Instrument Specialist</fullName>
            </value>
            <value>
                <fullName>International</fullName>
            </value>
            <value>
                <fullName>IT</fullName>
            </value>
            <value>
                <fullName>LATAM</fullName>
            </value>
            <value>
                <fullName>LATMEA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>