force-app/main/default/objects/User/fields/SubReg__c.field-meta.xml
<CustomField>
    <fullName>SubReg__c</fullName>
    <label>SubReg</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Reg__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>ACCS</fullName>
            </value>
            <value>
                <fullName>Admin</fullName>
            </value>
            <value>
                <fullName>Africa</fullName>
            </value>
            <value>
                <fullName>All</fullName>
            </value>
            <value>
                <fullName>ANZ</fullName>
            </value>
            <value>
                <fullName>APAC</fullName>
            </value>
            <value>
                <fullName>BEL-NLD</fullName>
                <isActive>false</isActive>
                <label>BEL-NLD</label>
            </value>
            <value>
                <fullName>Benelux</fullName>
            </value>
            <value>
                <fullName>Brazil</fullName>
            </value>
            <value>
                <fullName>Business Solutions Manager</fullName>
            </value>
            <value>
                <fullName>Canada</fullName>
            </value>
            <value>
                <fullName>Central</fullName>
            </value>
            <value>
                <fullName>Central East</fullName>
            </value>
            <value>
                <fullName>Central Europe</fullName>
            </value>
            <value>
                <fullName>Central West</fullName>
            </value>
            <value>
                <fullName>China</fullName>
            </value>
            <value>
                <fullName>Clinical Central</fullName>
            </value>
            <value>
                <fullName>Clinical Northeast</fullName>
            </value>
            <value>
                <fullName>Clinical Southeast</fullName>
            </value>
            <value>
                <fullName>Clinical West</fullName>
            </value>
            <value>
                <fullName>DACH</fullName>
            </value>
            <value>
                <fullName>Direct Europe</fullName>
            </value>
            <value>
                <fullName>East</fullName>
            </value>
            <value>
                <fullName>Eastern Europe</fullName>
            </value>
            <value>
                <fullName>EEMEA</fullName>
            </value>
            <value>
                <fullName>EMEA</fullName>
            </value>
            <value>
                <fullName>Emerging Markets</fullName>
            </value>
            <value>
                <fullName>EU</fullName>
            </value>
            <value>
                <fullName>EUR</fullName>
            </value>
            <value>
                <fullName>EurAfrica</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>